# Group20

./: Cargo.toml  Dockerfile  LICENSE  README.md  maturin-build.sh  test.py
benches/: bench_main.rs
onnx-runtime/: Cargo.toml  README.md
onnx-runtime-cli/: Cargo.toml  README.md
onnx-runtime-cli/src/: cli.rs  main.rs
onnx-runtime/benches/: bench_main.rs
onnx-runtime/benches/benchmarks/: bench_bn.rs  bench_convolution.rs  bench_gemm.rs  bench_maxpool.rs  bench_runtime.rs  mod.rs
onnx-runtime/src/: lib.rs  prepare.rs  service.rs  tensor.rs  utils.rs
onnx-runtime/src/graph/: ioreader.rs  mod.rs  translator.rs
onnx-runtime/src/onnx_format/: mod.rs
onnx-runtime/src/operators/: attributes.rs  initializers.rs  mod.rs
onnx-runtime/src/providers/: mod.rs  naive.rs  parallel.rs
onnx-runtime/src/service/: labels.rs  mod.rs  prepare.rs  utility.rs
onnx-runtime/tests/: operators.rs  parser.rs  tensor.rs
onnx-runtime/tests/tensors/add/: x.npy  y.npy  z.npy
onnx-runtime/tests/tensors/bn/big/: b.npy  mean.npy  scale.npy  var.npy
onnx-runtime/tests/tensors/bn/normal/: b.npy  mean.npy  var.npy  x.npy  y.npy
onnx-runtime/tests/tensors/bn/small/: b.npy  mean.npy  y.npy
onnx-runtime/tests/tensors/clip/: x.npy  y.npy
onnx-runtime/tests/tensors/convolution/basic/: x.npy
onnx-runtime/tests/tensors/convolution/big/: w.npy
onnx-runtime/tests/tensors/convolution/complete/: x.npy
onnx-runtime/tests/tensors/convolution/complete_bias/: w.npy  x.npy  y.npy
onnx-runtime/tests/tensors/convolution/dil2/: w.npy  y.npy
onnx-runtime/tests/tensors/convolution/dil2big/: w.npy  y.npy
onnx-runtime/tests/tensors/convolution/dil2big_stride2/: w.npy  x.npy  y.npy
onnx-runtime/tests/tensors/convolution/dil2big_stride2_pad2/: x.npy
onnx-runtime/tests/tensors/convolution/pad1/: x.npy
onnx-runtime/tests/tensors/convolution/stride2/: w.npy  x.npy  y.npy
onnx-runtime/tests/tensors/gemm/big/: a.npy  b.npy  c.npy  y.npy
onnx-runtime/tests/tensors/glob_avg_pool/: y.npy
onnx-runtime/tests/tensors/maxpool/small/: x.npy  y.npy
onnx-runtime/tests/tensors/relu/: y.npy
(+64 files in other folders)
