[package]
name = "onnx-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Attilio Oliva", "Aldo Pietromatera", "Andrea Leone"]
license = "MIT"
repository = "https://github.com/ProgrammazioneDiSistema2023-IA-ZZ/Group20"

[dependencies]
prost = "0.11.9"
ndarray = "0.15.6"
petgraph = "0.6.3"
num-derive = "0.4.0"
num-traits = "0.2.16"
thiserror = "1.0.44"
criterion = "0.5.1"
image = "0.24.7"

[dev-dependencies]
npy = "0.4.0"
ndarray-csv = "0.5.2"
csv = "1.2.2"

[[bench]]
name = "bench_main"
harness = false
