[package]
name = "onnx-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Attilio Oliva", "Aldo Pietromatera", "Andrea Leone"]
license = "MIT"
repository = "https://github.com/ProgrammazioneDiSistema2023-IA-ZZ/Group20"

[dependencies]
prost = "0.11.9"
ndarray = { version = "0.15.6", features = ["rayon"] }
petgraph = "0.6.3"
num-derive = "0.4.0"
num-traits = "0.2.16"
thiserror = "1.0.44"
criterion = "0.5.1"
image = "0.24.7"
lazy_static = "1.4.0"
rayon = "1.7.0"

[dev-dependencies]
npy = "0.4.0"

[[bench]]
name = "bench_main"
harness = false
